--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -13,8 +13,21 @@
     <WindowsSdkPackageVersion>10.0.19041.29</WindowsSdkPackageVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="TimetablePage.xaml.cs" />
+    <Compile Remove="Vulcan\Attendance\LessonsService.cs" />
+    <Compile Remove="Vulcan\Attendance\Report\AttendanceReportService.cs" />
+    <Compile Remove="Vulcan\Grades\Average\AverageGrades.cs" />
+    <Compile Remove="Vulcan\Grades\Final\FinalGrades.cs" />
+    <Compile Remove="Vulcan\Timetable\Changes\TimetableChanges.cs" />
+    <Compile Remove="Vulcan\Timetable\OgTimetable.cs" />
+    <Compile Remove="Vulcan\Timetable\Timetable.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="GradesPage.xaml" />
     <None Remove="TimetablePage.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Remove="TimetablePage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,11 +41,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="DevExpress.WinUI" Version="23.2.3" />
+    <PackageReference Include="LiteDB.Async" Version="0.1.7" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc1.2" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231115000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="UonetRequestSigner" Version="1.0.0" />
+    <PackageReference Include="Vulcanova.Uonet" Version="1.2.0" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
@@ -41,11 +58,6 @@
        package has not yet been restored -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Update="TimetablePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="GradesPage.xaml">
