Added loading to attendance widget and justification granted icon - doesnt work tho

--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -17,6 +17,9 @@
     <Compile Remove="Vulcan\Grades\Average\AverageGrades.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Remove="Assets\JustifyGranted.png" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="BlankPage1.xaml" />
     <None Remove="GradesPage.xaml" />
     <None Remove="GradesSummaryPage.xaml" />
