Created Attendance Lesson Item control.

--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -26,6 +26,7 @@
     <None Remove="MainPanelPage.xaml" />
     <None Remove="TimetablePage.xaml" />
     <None Remove="UserControl1.xaml" />
+    <None Remove="UserControls\AttendanceLessonItem.xaml" />
     <None Remove="UserControls\JustificationRequestStatus.xaml" />
     <None Remove="UserControls\SummaryAverageGradeDisplayer.xaml" />
   </ItemGroup>
@@ -96,6 +97,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Viewmodels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\AttendanceLessonItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="UserControls\JustificationRequestStatus.xaml">
