--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -25,11 +25,13 @@
     <None Remove="GradesSummaryPage.xaml" />
     <None Remove="MainPanelPage.xaml" />
     <None Remove="MessagesPage.xaml" />
+    <None Remove="SettingsPage.xaml" />
     <None Remove="TimetablePage.xaml" />
     <None Remove="UserControls\AttendanceLessonItem.xaml" />
     <None Remove="UserControls\JustificationRequestStatus.xaml" />
     <None Remove="UserControls\LessonFlyoutInfoContent.xaml" />
     <None Remove="UserControls\MessageControl.xaml" />
+    <None Remove="UserControls\Settings\ReminderSettings.xaml" />
     <None Remove="UserControls\SingleMessageBig.xaml" />
     <None Remove="UserControls\SingleMessageSmall.xaml" />
     <None Remove="UserControls\SummaryAverageGradeDisplayer.xaml" />
@@ -115,6 +117,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Viewmodels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\Settings\ReminderSettings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="SettingsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="UserControls\SingleMessageBig.xaml">
