--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -100,7 +100,7 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="UserControls\SingleMessageSmall.xaml">
+    <Page Update="UserControls\Messages\SingleMessageSmall.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
@@ -147,12 +147,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="UserControls\SingleMessageBig.xaml">
+    <Page Update="UserControls\Messages\SingleMessageBig.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="UserControls\MessageControl.xaml">
+    <Page Update="UserControls\Messages\MessageControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
