--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -30,6 +30,7 @@
     <None Remove="TimetablePage.xaml" />
     <None Remove="UserControls\AttachmentsIndicator.xaml" />
     <None Remove="UserControls\AttendanceLessonItem.xaml" />
+    <None Remove="UserControls\Deadlinables\ExamPopup.xaml" />
     <None Remove="UserControls\DeadlineDisplayer.xaml" />
     <None Remove="UserControls\JustificationRequestStatus.xaml" />
     <None Remove="UserControls\LessonFlyoutInfoContent.xaml" />
@@ -123,7 +124,12 @@
     <Folder Include="Viewmodels\" />
   </ItemGroup>
   <ItemGroup>
-    <Page Update="UserControls\DeadlineDisplayer.xaml">
+    <Page Update="UserControls\Deadlinables\ExamPopup.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\Deadlinables\DeadlineDisplayer.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
@@ -133,7 +139,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="UserControls\SingleDeadlineable.xaml">
+    <Page Update="UserControls\Deadlinables\SingleDeadlineable.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
