--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -30,6 +30,7 @@
     <None Remove="TimetablePage.xaml" />
     <None Remove="UserControls\AttachmentsIndicator.xaml" />
     <None Remove="UserControls\AttendanceLessonItem.xaml" />
+    <None Remove="UserControls\Deadlinables\DeadlineablesWidget.xaml" />
     <None Remove="UserControls\Deadlinables\ExamPopup.xaml" />
     <None Remove="UserControls\DeadlineDisplayer.xaml" />
     <None Remove="UserControls\JustificationRequestStatus.xaml" />
@@ -122,6 +123,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Viewmodels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\Deadlinables\DeadlineablesWidget.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="UserControls\Deadlinables\ExamPopup.xaml">
