--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -46,6 +46,7 @@
     <None Remove="UserControls\SummaryAverageGradeDisplayer.xaml" />
     <None Remove="UserControls\TimetableDayDisplayer.xaml" />
     <None Remove="UserControls\TimetableItem.xaml" />
+    <None Remove="UserControls\Widgets\GradesWidget.xaml" />
     <None Remove="Vulcan\BlankPage1.xaml" />
     <None Remove="Vulcan\GradesChartsPage.xaml" />
   </ItemGroup>
@@ -127,6 +128,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Viewmodels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\Widgets\GradesWidget.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="UserControls\GradesCharts\SubjectMonthGrades.xaml">
