--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -36,6 +36,7 @@
     <None Remove="UserControls\Deadlinables\DeadlineablesWidget.xaml" />
     <None Remove="UserControls\Deadlinables\ExamPopup.xaml" />
     <None Remove="UserControls\DeadlineDisplayer.xaml" />
+    <None Remove="UserControls\GradeFullInfo.xaml" />
     <None Remove="UserControls\GradesCharts\SubjectMonthGrades.xaml" />
     <None Remove="UserControls\JustificationRequestStatus.xaml" />
     <None Remove="UserControls\LessonFlyoutInfoContent.xaml" />
@@ -135,6 +136,11 @@
     <Content Update="Assets\Credentials.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\GradeFullInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="UserControls\Widgets\AttendanceWidget.xaml">
