--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -17,9 +17,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Assets\JustifyGranted.png" />
+    <Content Remove="Assets\LargeTile.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Assets\Credentials.json" />
+    <None Remove="Assets\JustifyGranted.png" />
     <None Remove="AttendanceReportPage.xaml" />
     <None Remove="BlankPage1.xaml" />
     <None Remove="DeadlineablePage.xaml" />
@@ -33,6 +35,7 @@
     <None Remove="TimetablePage.xaml" />
     <None Remove="UserControls\AttachmentsIndicator.xaml" />
     <None Remove="UserControls\AttendanceLessonItem.xaml" />
+    <None Remove="UserControls\ClassmatesGrades\SingleClassmateGrades.xaml" />
     <None Remove="UserControls\Deadlinables\DeadlineablesWidget.xaml" />
     <None Remove="UserControls\Deadlinables\ExamPopup.xaml" />
     <None Remove="UserControls\DeadlineDisplayer.xaml" />
@@ -57,11 +60,9 @@
   <ItemGroup>
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -133,9 +134,17 @@
     <Folder Include="Viewmodels\" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\JustifyGranted.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Update="Assets\Credentials.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\ClassmatesGrades\SingleClassmateGrades.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="UserControls\GradeFullInfo.xaml">
