Dodano usługę w tle odpowiadającą za powiadomienia oraz wysyłanie ocen na serwer.

--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -11,6 +11,7 @@
     <UseWinUI>true</UseWinUI>
     <EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
     <WindowsSdkPackageVersion>10.0.19041.29</WindowsSdkPackageVersion>
+    <StartupObject>VulcanForWindows.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Vulcan\Grades\Average\AverageGrades.cs" />
