Zmieniono teksty powiadomień, dodano poprawne uruchamianie do głównego wątku

--- a/VulcanForWindowsBgWorker/VulcanForWindowsBgWorker.csproj
+++ b/VulcanForWindowsBgWorker/VulcanForWindowsBgWorker.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="GradesIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="GradesIcon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="LiteDB.Async" Version="0.1.7" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
