--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -62,12 +62,14 @@
     <None Remove="UserControls\AccountSelectorControl.xaml" />
     <None Remove="UserControls\AttachmentsIndicator.xaml" />
     <None Remove="UserControls\AttendanceLessonItem.xaml" />
+    <None Remove="UserControls\AverageDisplayerSmall.xaml" />
     <None Remove="UserControls\ClassmatesGrades\SingleClassmateGrades.xaml" />
     <None Remove="UserControls\Deadlinables\DeadlineablesWidget.xaml" />
     <None Remove="UserControls\Deadlinables\ExamPopup.xaml" />
     <None Remove="UserControls\DeadlineDisplayer.xaml" />
     <None Remove="UserControls\GradeFullInfo.xaml" />
     <None Remove="UserControls\GradesCharts\SubjectMonthGrades.xaml" />
+    <None Remove="UserControls\Grades\SubjectGradesExpander.xaml" />
     <None Remove="UserControls\InfoDisplayControl.xaml" />
     <None Remove="UserControls\JustificationRequestStatus.xaml" />
     <None Remove="UserControls\LessonFlyoutInfoContent.xaml" />
@@ -334,6 +336,16 @@
   </ItemGroup>
   <ItemGroup>
     <Page Remove="FinalGradesAnalyzerPage.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\Grades\SubjectGradesExpander.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\AverageDisplayerSmall.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="GradesPage.xaml">
