Usunięcie zbędnych plików

--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -35,6 +35,7 @@
     <Page Remove="Assets\BgWorker\**" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="BlankPage1.xaml.cs" />
     <Compile Remove="FinalGradesAnalyzerPage.xaml.cs" />
     <Compile Remove="Vulcan\Grades\Average\AverageGrades.cs" />
   </ItemGroup>
